hice unas modificaciones en el punto 5

--- a/appPeliculas/templates/actor/index.html
+++ b/appPeliculas/templates/actor/index.html
@@ -9,7 +9,7 @@
 <article class="post">
   <header>
     <div>
-      <h1>{{ cat['Categorias'] }}</h1>
+      <h1>{{ cat['actores'] }}</h1>
       <div class="about"></div>
     </div>
 </header>
