--- a/appPeliculas/templates/pelis/index.html
+++ b/appPeliculas/templates/pelis/index.html
@@ -4,8 +4,8 @@
 <article class="peliculas">
   <header>
     <div>
-      <h1>{{ pelicula['titulo'] }}</h1>
-      <div class="about">{{ pelicula['lenguaje'] }}</div>
+      <h1>{{ pelicula['Pelicula'] }}</h1>
+      <div class="about">{{ pelicula['Nombre'] }}, {{ pelicula['Apellido'] }}</div>
     </div>
     {% endfor %} {% endblock %}
   </header>
