--- a/appPeliculas/templates/actor/index.html
+++ b/appPeliculas/templates/actor/index.html
@@ -1,22 +1,17 @@
 {% extends 'base.html' %} 
 
 {% block header %}
-<h1>{% block title %} actores% {% endblock %}</h1>
+<h1>:actores</h1>
 {% endblock %}
 
  {% block content %}
  {% for actor in actores%}
-<article class="post">
+<article class="peliculas">
   <header>
     <div>
-      <h1>{{ cat['actores'] }}</h1>
-      <div class="about"></div>
+      <h1>{{ actor['Nombre'] }}, {{ actor['Apellido']}}</h1>
     </div>
 </header>
-<p class = "body"></p>
 </article>
-  {% if not loop.last %}
-  <hr>
-      {% endif %} 
-    {% endfor %} 
+{% endfor %} 
 {% endblock %}
