--- a/appPeliculas/templates/base.html
+++ b/appPeliculas/templates/base.html
@@ -2,8 +2,19 @@
 <title>{% block title %}{% endblock %} - Flaskr</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
-  <h1>Flaskr</h1>
+  <h1>Peliculas</h1>
   <ul>
+    <li><a href = "{{url for ('lenguajes.index')}}">Lenguajes</a>
+    </li>
+    <li>
+      <a href ="{{url for('categorias.index')}}">Categorias</a>
+    </li>
+    <li>
+      <a href ="{{url for('categorias.index')}}">Actores</a>
+    </li>
+    <li>
+      <a href ="{{url for('categorias.index')}}">Peliculas</a>
+    </li>
   </ul>
 </nav>
 <section class="content">
