--- a/appPeliculas/templates/category/index.html
+++ b/appPeliculas/templates/category/index.html
@@ -1,23 +1,17 @@
 {% extends 'base.html' %} 
 
 {% block header %}
-<h1>{% block title %} categorias {% endblock %}</h1>
+<h1>categorias:</h1>
 {% endblock %}
 
  {% block content %}
- {% for cat in Category %}
-<article class="post">
+ {% for categoria in Categorias %}
+<article class="peliculas">
   <header>
     <div>
-      <h1>{{ cat['Categorias'] }}</h1>
-      <div class="about"></div>
+      <h1>{{ categoria['categoria'] }}</h1>
     </div>
 </header>
-<p class = "body"></p>
 </article>
-  {% if not loop.last %}
-  <hr>
-      {% endif %} 
-    {% endfor %} 
+{% endfor %} 
 {% endblock %}
- 
