--- a/appPeliculas/templates/lenguaje/index.html
+++ b/appPeliculas/templates/lenguaje/index.html
@@ -1,22 +1,18 @@
 {% extends 'base.html' %} 
 
 {% block header %}
-<h1>{% block title %} lenguaje% {% endblock %}</h1>
+<h1>lenguaje:</h1>
 {% endblock %}
 
  {% block content %}
- {% for actor in actores%}
-<article class="post">
+ {% for lenguaje in lenguajes%}
+<article class="peliculas">
   <header>
     <div>
-      <h1>{{ cat['lenguaje'] }}</h1>
+      <h1>{{ lenguaje['lenguaje'] }}</h1>
       <div class="about"></div>
     </div>
 </header>
-<p class = "body"></p>
 </article>
-  {% if not loop.last %}
-  <hr>
-      {% endif %} 
-    {% endfor %} 
+{% endfor %} 
 {% endblock %}
