--- a/appPeliculas/templates/base.html
+++ b/appPeliculas/templates/base.html
@@ -4,16 +4,16 @@
 <nav>
   <h1>Peliculas</h1>
   <ul>
-    <li><a href = "{{url for ('lenguajes.index')}}">Lenguajes</a>
+    <li><a href = "{{url_for ('lenguaje.index')}}">Lenguajes</a>
     </li>
     <li>
-      <a href ="{{url for('categorias.index')}}">Categorias</a>
+      <a href ="{{url_for('categoria.index')}}">Categorias</a>
     </li>
     <li>
-      <a href ="{{url for('categorias.index')}}">Actores</a>
+      <a href ="{{url_for('actores.index')}}">Actores</a>
     </li>
     <li>
-      <a href ="{{url for('categorias.index')}}">Peliculas</a>
+      <a href ="{{url_for('pelis.index')}}">Peliculas</a>
     </li>
   </ul>
 </nav>
