--- a/appPeliculas/templates/pelis/index.html
+++ b/appPeliculas/templates/pelis/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block header %}
-<h1>{% block title %}--{% endblock %}</h1>
+<h1>{% block title %}Peliculas:{% endblock %}</h1>
 {% endblock %} {% block content %} {% for pelicula in pelis %}
 <article class="peliculas">
   <header>
